src/objects/GBLite__GB_User_Field_Settings__c.object
<CustomObject>
    <fields>
        <fullName>GBLite__Filter_Parent_By_Children__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Parent By Children</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_1b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 1b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_1c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 1c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_1d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 1d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_1e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 1e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_2b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 2b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_2c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 2c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_2d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 2d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_2e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 2e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_3b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 3b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_3c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 3c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_3d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 3d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Order_By_Field_3e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order By Field 3e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_1b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 1b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_1c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 1c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_1d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 1d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_1e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 1e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_2b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 2b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_2c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 2c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_2d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 2d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_2e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 2e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_3b__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 3b</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_3c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 3c</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_3d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 3d</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Sort_Order_3e__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Order 3e</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>GB User Field Settings</label>
    <listViews>
        <fullName>GBLite__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GB User Field Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GB User Field Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>